Fixed a dab size bug introduced by the smooth brush rotation fix

The fast-path code should crop the image by the actuall
expected rect.

BUG:329187